--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -107,6 +107,14 @@
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
       </LinearLayout>
 
+      <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChart"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp">
+      </com.github.mikephil.charting.charts.LineChart>
+
       <Button
         android:id="@+id/update"
         android:layout_width="wrap_content"
