--- a/app/src/main/res/menu/graphs_single_menu.xml
+++ b/app/src/main/res/menu/graphs_single_menu.xml
@@ -5,7 +5,12 @@
   <item
     android:id="@+id/graphs_single_line_graph"
     android:orderInCategory="100"
-    android:title="@string/draw_line_graph"
+    android:title="@string/draw_line_graph_glucose_over_time"
+    app:showAsAction="never"/>
+  <item
+    android:id="@+id/graphs_single_line_graph_rise"
+    android:orderInCategory="100"
+    android:title="@string/draw_line_graph_glucose_increase"
     app:showAsAction="never"/>
   <item
     android:id="@+id/graphs_single_bar_graph"
