--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -3,8 +3,8 @@
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <item
-    android:id="@+id/add_tmp_user"
+    android:id="@+id/legal_notifications"
     android:orderInCategory="100"
-    android:title="Legal Notifications"
+    android:title="@string/legal_notifications"
     app:showAsAction="never"/>
 </menu>
