Added gaps to prevent floating buttons hiding content

--- a/app/src/main/res/layout/fragment_measurements.xml
+++ b/app/src/main/res/layout/fragment_measurements.xml
@@ -18,7 +18,8 @@
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recyclerView"
       android:layout_width="match_parent"
-      android:layout_height="match_parent"/>
+      android:layout_height="match_parent"
+        android:layout_marginBottom="100dp"/>
 
     <hochschule.de.bachelorthesis.widget.BetterFloatingActionButton
       android:id="@+id/add"
