--- a/app/src/main/res/navigation/main_activity_nav_graph.xml
+++ b/app/src/main/res/navigation/main_activity_nav_graph.xml
@@ -28,7 +28,7 @@
       app:destination="@id/addFood"/>
     <action
       android:id="@+id/action_foodFragment_to_foodInfoFragment"
-      app:destination="@id/foodInfoFragment"/>
+      app:destination="@id/foodHostFragment"/>
   </fragment>
 
   <fragment
@@ -38,26 +38,31 @@
     tools:layout="@layout/fragment_food_add"/>
 
   <fragment
-    android:id="@+id/foodInfoFragment"
-    android:label="@string/food_information"
-    android:name="hochschule.de.bachelorthesis.view.food.FoodHostFragment"
-    tools:layout="@layout/fragment_food_host">
+      android:id="@+id/foodHostFragment"
+      android:name="hochschule.de.bachelorthesis.view.food.FoodHostFragment"
+      android:label="{title}"
+      tools:layout="@layout/fragment_food_host">
     <action
-      android:id="@+id/action_foodInfoFragment_to_addMeasurement"
-      app:destination="@id/addMeasurement"/>
+        android:id="@+id/action_foodInfoFragment_to_addMeasurement"
+        app:destination="@id/addMeasurement" />
+    <action
+        android:id="@+id/action_foodInfoFragment_to_measurementFragment"
+        app:destination="@id/measurementFragment"
+        app:popUpToInclusive="false" />
+    <action
+        android:id="@+id/action_foodInfoFragment_to_editFoodDataFragment2"
+        app:destination="@id/editFoodDataFragment2" />
+    <action
+        android:id="@+id/action_foodInfoFragment_to_foodFragment"
+        app:destination="@id/foodFragment" />
     <argument
-      android:name="food_id"
-      app:argType="integer"/>
-    <action
-      android:id="@+id/action_foodInfoFragment_to_measurementFragment"
-      app:destination="@id/measurementFragment"
-      app:popUpToInclusive="false"/>
-    <action
-      android:id="@+id/action_foodInfoFragment_to_editFoodDataFragment2"
-      app:destination="@id/editFoodDataFragment2"/>
-    <action
-      android:id="@+id/action_foodInfoFragment_to_foodFragment"
-      app:destination="@id/foodFragment"/>
+        android:name="food_id"
+        app:argType="integer" />
+
+    <argument
+        android:name="title"
+        app:argType="string" />
+
   </fragment>
 
   <fragment
@@ -70,7 +75,7 @@
       app:argType="integer"/>
     <action
       android:id="@+id/action_addMeasurement_to_foodInfoFragment"
-      app:destination="@id/foodInfoFragment"/>
+      app:destination="@id/foodHostFragment"/>
   </fragment>
 
   <fragment
