--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto">
-  <item
-    android:id="@+id/legal_notifications"
-    android:orderInCategory="100"
-    android:title="@string/legal_notifications"
-    app:showAsAction="never"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/how_to_use"
+        android:orderInCategory="100"
+        android:title="@string/how_to_use_this_app"
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/legal_notifications"
+        android:orderInCategory="100"
+        android:title="@string/legal_notifications"
+        app:showAsAction="never" />
 </menu>
