--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
   <color name="colorPrimary">#0277bd</color>
   <color name="colorPrimaryDark">#004c8c</color>
-  <color name="colorAccent">#42a5f5</color>
+  <color name="colorAccent">#42A5F5</color>
   <color name="colorSecondary">#0277bd</color>
 
 </resources>
