--- a/app/src/main/res/layout/fragment_how_to_use.xml
+++ b/app/src/main/res/layout/fragment_how_to_use.xml
@@ -4,12 +4,15 @@
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbarStyle="outsideOverlay"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:gravity="center"
             tools:context=".view.home.HowToUse">
 
             <LinearLayout
@@ -23,7 +26,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:text="@string/how_to_use_header_1"
                     android:textColor="@color/colorPrimary"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
@@ -36,10 +38,8 @@
 
                 <ImageView
                     android:paddingTop="16dp"
-                    android:layout_width="400dp"
-                    android:layout_height="400dp"
-                    android:adjustViewBounds="true"
-                    android:layout_gravity="center"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
                     android:src="@drawable/how_to_me"
                     android:contentDescription="@null">
                 </ImageView>
@@ -56,7 +56,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:text="@string/how_to_use_header_2"
                     android:textColor="@color/colorPrimary"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
@@ -69,10 +68,9 @@
 
                 <ImageView
                     android:paddingTop="16dp"
-                    android:layout_width="400dp"
-                    android:layout_height="400dp"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:src="@drawable/how_to_my_foods"
                     android:contentDescription="@null">
                 </ImageView>
@@ -89,7 +87,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:text="@string/how_to_use_header_3"
                     android:textColor="@color/colorPrimary"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
@@ -102,20 +99,18 @@
 
                 <ImageView
                     android:paddingTop="16dp"
-                    android:layout_width="400dp"
-                    android:layout_height="400dp"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:src="@drawable/how_to_food_1"
                     android:contentDescription="@null">
                 </ImageView>
 
                 <ImageView
                     android:paddingTop="16dp"
-                    android:layout_width="400dp"
-                    android:layout_height="400dp"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:src="@drawable/how_to_food_2"
                     android:contentDescription="@null">
                 </ImageView>
@@ -133,7 +128,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:gravity="center"
                     android:text="@string/how_to_use_header_4"
                     android:textColor="@color/colorPrimary"
                     android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"/>
@@ -146,10 +140,9 @@
 
                 <ImageView
                     android:paddingTop="16dp"
-                    android:layout_width="400dp"
-                    android:layout_height="400dp"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
                     android:adjustViewBounds="true"
-                    android:layout_gravity="center"
                     android:src="@drawable/how_to_update"
                     android:contentDescription="@null">
                 </ImageView>
